--- a/header.css
+++ b/header.css
@@ -2,10 +2,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap');
 
 header {
+    margin-top: 1%;
     margin: 1em;
     display: flex;
     justify-content: space-between;
-    align-items: center;
+    align-items: center;  
     font-family: 'Poppins', sans-serif;
 }
 
