--- a/componentes/header.css
+++ b/componentes/header.css
@@ -6,7 +6,6 @@ header {
     margin: 1em;
     display: flex;
     justify-content: space-between;
-    align-items: center;  
     font-family: 'Poppins', sans-serif;
 }
 
@@ -39,4 +38,25 @@ nav a:hover{
 .user-image img {
     height: 3em;
     width: 3.5em;
+}
+.menu{
+    width: 120px;
+    height: 170px;
+    background-color: #EFEFEF;
+    border-radius: 10px;
+    display:flex ;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+    font-family: 'Inter';
+    display:none;
+}
+.menu a{
+    margin: auto;
+}
+.user-image{
+    width:120px;
+    display:flex;
+    flex-direction:column;
+    
 }
