--- a/estilos/homeUsuario.css
+++ b/estilos/homeUsuario.css
@@ -1,3 +1,27 @@
+    
+.menu{
+    width: 120px;
+    height: 170px;
+    background-color: #EFEFEF;
+    border-radius: 10px;
+    display:flex ;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+    font-family: 'Inter';
+    display:none;
+    position:absolute;
+    margin-top:50px;
+}
+.menu a{
+    margin: auto;
+}
+.user-image{
+    width:120px;
+    display:flex;
+    flex-direction:column;
+    
+}
 @import url('https://fonts.googleapis.com/css?family=Poppins:400,700,900');
 
 #main-content{
@@ -20,11 +44,15 @@
 }
 
 #filter{
+    margin-top:1.8%;
     margin-left: 10%;
+    border: 1.5px solid #e5e5e5e5;
+    padding:10px;
+    height:37%;
+    border-radius:6px;
 }
 
 .filtertext{
-    margin-bottom: 20px;
     font-size: 20px;
     font-family: 'Inter';
     font-weight: 550;
@@ -32,17 +60,28 @@
     user-select: none;
     text-align: left;
 }
+
 input{
+    margin-top:6px;
     background-color: #f5f5f5;
     border:none;
-
+    border-radius:6px;
+    padding:0.3vh;
+    width: 170px;
+    outline:none;
+    color:grey;
 }
 select{
+    margin-top:6px;
     background-color: #f5f5f5;
     border:none;
-    border-radius: 10px;
-    
+    border-radius: 6px;
+    padding:0.5vh;
+    width: 175px;
+    outline:none;
+    color:grey;
 }
+
 #list{
     height: inherit;
     width: 80%;
@@ -55,15 +94,16 @@ select{
     margin: 0;
 }
 .botonamarillo{
-    margin-bottom: 5%;
+    margin-top:15px;
     border:none;
     border-radius:15px;
     width: 175px;
     background-color: #FCDA68;
-    padding: 6px;
+    padding: 2px;
     color: #ffffff;
     font-family: 'Inter';
-    font-size: 14px;
+    font-size: 16px;
+    font-weight:500;
 }
 .botonamarillo:hover{
     cursor:pointer;
