refactorizacion de codigo

--- a/estilos/formPostEncontrado.css
+++ b/estilos/formPostEncontrado.css
@@ -170,3 +170,26 @@ body p{
     border-radius: 2rem;
     cursor: pointer;
 }
+.menu{
+    width: 120px;
+    height: 170px;
+    background-color: #EFEFEF;
+    border-radius: 10px;
+    display:flex ;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+    font-family: 'Inter';
+    display:none;
+    position:absolute;
+    margin-top:50px;
+}
+.menu a{
+    margin: auto;
+}
+.user-image{
+    width:120px;
+    display:flex;
+    flex-direction:column;
+    
+}
