sistema de denuncia y eliminar post denunciado terminado

--- a/componentes/header.css
+++ b/componentes/header.css
@@ -50,6 +50,7 @@ nav a:hover{
     text-align: center;
     font-family: 'Inter';
     display:none;
+    position: absolute;
 }
 .menu a{
     margin: auto;
