--- a/estilos/formPostBuscado.css
+++ b/estilos/formPostBuscado.css
@@ -1,6 +1,6 @@
 body{
     
-    height: 100%;
+    height: 55rem;
     width: 100%;
     margin: 0%;
     padding: 0%;
@@ -24,19 +24,36 @@ body p{
     margin: auto;
 }
 
+header{
+    height: 10%;
+
+}
+
+.mensajePostBuscado{
+    height: 5%;
+
+}
+
+.formBuscado{
+    height: 85%;
+
+}
+
 
 
 .datos{
+    height: 70%;
     border: 1px solid rgb(206, 206, 206);
     border-radius: 6px;
     overflow: auto;
 }
 
 .datos p{
+    margin-top: 20%;
     font-size: 1rem;
     margin-left: 0;
     font-weight: 400;
-    margin-bottom: 0%;
+    margin-bottom: 1%;
 }
 
 .datos select{
@@ -63,14 +80,14 @@ body p{
     color:grey;
 }
 .f1{
-    height: 5rem;
+    height: 10rem;
     margin: auto;
     display: flex;
 
     justify-content: center;
 }
 .f2{
-    height: 5rem;
+    height: 10rem;
     
     display: flex;
 }
@@ -146,6 +163,7 @@ body p{
     margin-right: 20%;
 }
 .fechas p{
+    
     font-size: 00.80rem;
     font-weight: 400;
     width: 2rem;
@@ -154,6 +172,18 @@ body p{
 
 }
 
+.fechas .inp{
+    height: 2.05rem;
+}
+
+
+.sexo{
+    margin-top: 5rem;
+}
+
+.nombre{
+    margin-top: 5rem;
+}
 .day{
     width: 26%;
     font-size: 0.80rem;
