Añadido header responsive a todas las vistas (Administrador y usario normal)

--- a/estilos/formPostBuscado.css
+++ b/estilos/formPostBuscado.css
@@ -1,14 +1,35 @@
 body{
     
-    height: 55rem;
-    width: 100%;
-    margin: 0%;
-    padding: 0%;
+    height: 100vh;
+    width: 98vw;
     font-family: 'Inter';
     color: #2D2B40
     
 }
 
+.menu{
+    width: 120px;
+    height: 170px;
+    background-color: #EFEFEF;
+    border-radius: 10px;
+    display:flex ;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+    font-family: 'Inter';
+    display:none;
+    position:absolute;
+    margin-top:50px;
+}
+.menu a{
+    margin: auto;
+}
+.user-image{
+    width:120px;
+    display:flex;
+    flex-direction:column;
+    
+}
 
 body p{
     margin-left: 5%;
@@ -22,11 +43,6 @@ body p{
     height: 120%;
     width: 90%;
     margin: auto;
-}
-
-header{
-    height: 10%;
-
 }
 
 .mensajePostBuscado{
@@ -245,27 +261,4 @@ header{
     border:none;
     border-radius: 2rem;
     cursor: pointer;
-}
-.menu{
-    width: 120px;
-    height: 170px;
-    background-color: #EFEFEF;
-    border-radius: 10px;
-    display:flex ;
-    flex-direction: column;
-    justify-content: center;
-    text-align: center;
-    font-family: 'Inter';
-    display:none;
-    position:absolute;
-    margin-top:50px;
-}
-.menu a{
-    margin: auto;
-}
-.user-image{
-    width:120px;
-    display:flex;
-    flex-direction:column;
-    
 }
