--- a/estilos/chat.css
+++ b/estilos/chat.css
@@ -1,9 +1,30 @@
 body {
     height: 100vh;
-    margin: 0;
-    padding: 0;
     font-family: 'Inter';
-    overflow: hidden;
+}
+
+.menu{
+    width: 120px;
+    height: 170px;
+    background-color: #EFEFEF;
+    border-radius: 10px;
+    display:flex ;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+    font-family: 'Inter';
+    display:none;
+    position:absolute;
+    margin-top:50px;
+}
+.menu a{
+    margin: auto;
+}
+.user-image{
+    width:120px;
+    display:flex;
+    flex-direction:column;
+    
 }
 
 .main-container {
