--- a/estilos/homeUsuario.css
+++ b/estilos/homeUsuario.css
@@ -1,5 +1,5 @@
     
-.menu{
+.menu {
     width: 120px;
     height: 170px;
     background-color: #EFEFEF;
@@ -13,10 +13,10 @@
     position:absolute;
     margin-top:50px;
 }
-.menu a{
+.menu a {
     margin: auto;
 }
-.user-image{
+.user-image {
     width:120px;
     display:flex;
     flex-direction:column;
@@ -24,7 +24,7 @@
 }
 @import url('https://fonts.googleapis.com/css?family=Poppins:400,700,900');
 
-#main-content{
+#main-content {
     height: 100%;
     width: 100%;
     margin: 0%;
@@ -32,11 +32,122 @@
 }
 
 
-#container{
-    height: 1000px;
+#container {
+    min-height: 80vh;
     display: flex;
 }
 
+.mostrar-filtros {
+    width: 50%;
+    height: 3em;
+    display: none;
+    border: 1.5px solid #e5e5e5e5;
+    border-radius:6px;
+    font-size: 0.8rem;
+    font-family: 'Inter';
+    font-weight: bolder;
+    margin-bottom: 2em;
+}
+
+.mostrar-filtros h1 {
+    width: 80%;
+}
+
+#selector-image {
+    width: 10%;
+    height: 80%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+}
+
+#selector-image img {
+    width: 60%;
+    height: 100%;
+    margin-bottom: 0.8em;
+}
+
+#aside {
+    width: 15%;
+    height: 80vh;
+    display: flex;
+    justify-content: center;
+}
+
+form {
+    width: 70%;
+    height: 55%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    border: 1.5px solid #e5e5e5e5;
+    border-radius:6px;
+    padding: 1em;
+    margin-top: 0.34em;
+}
+
+.filtertext {
+    font-size: 1.2rem;
+    font-family: 'Inter';
+    font-weight: 550;
+    color: #2D2B40;
+    user-select: none;
+    text-align: left;
+}
+
+.slider {
+    font-size: 1rem;
+    width: 100%;
+    margin-top: 0.5em;
+    margin-bottom: 0.5em;
+}
+
+#demo {
+    font-size: 1rem;
+    font-weight: 400;
+}
+
+select {
+    font-family: 'Inter';
+    margin-top:0.8em;
+    background-color: #f5f5f5;
+    border:none;
+    border-radius: 6px;
+    padding:0.5vh;
+    width: 100%;
+    outline:none;
+    color:grey;
+}
+
+.date {
+    font-family: 'Inter';
+    margin-top:0.8em;
+    background-color: #f5f5f5;
+    border:none;
+    border-radius: 6px;
+    padding:0.5vh;
+    width: 96%;
+    outline:none;
+    color:grey;
+}
+
+.botonamarillo {
+    margin-top: 1em;
+    border:none;
+    border-radius:15px;
+    width: 100%;
+    background-color: #FCDA68;
+    padding: 0.2em;
+    color: #ffffff;
+    font-family: 'Inter';
+    font-size: 1rem;
+    font-weight:500;
+}
+.botonamarillo:hover {
+    cursor:pointer;
+}
+/*
 #aside{
     height: inherit;
     width: 20%;
@@ -82,18 +193,22 @@ select{
     outline:none;
     color:grey;
 }
+*/
 
-#list{
+#list {
     height: inherit;
     width: 80%;
+    gap: 1.5em;
     display: flex;
     flex-flow: wrap;
     align-content: flex-start;
+    margin-left: 2.5em;
 }
 
-.post{
+.post {
     margin: 0;
 }
+/*
 .botonamarillo{
     margin-top:15px;
     border:none;
@@ -108,4 +223,75 @@ select{
 }
 .botonamarillo:hover{
     cursor:pointer;
+}
+*/
+
+@media (max-width: 1250px) {
+    #container {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .mostrar-filtros {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+
+    #aside {
+        width: 100%;
+        height: 45vh;
+        display: none;
+    }
+
+    form {
+        width: 40%;
+        height: 95%;
+    }
+    /*
+    .filtertext {
+        font-size: 1rem;
+        margin: 0;
+        margin-left: 1.2em;
+    }
+
+    .slider {
+        margin: 0;
+        width: 90%;
+        margin-top: 0.6em;
+    }
+
+    select {
+        width: 80%;
+        margin: 0;
+        margin-top: 0.6em;
+    }
+
+    .date {
+        margin: 0;
+        margin-top: 0.6em;
+        width: 80%;
+    }
+
+    .botonamarillo {
+        width: 20%;
+        height: 5em;
+        padding: 0;
+        margin: 0;
+    }
+    */
+
+    #list {
+        width: 100%;
+        justify-content: center;
+        gap: 2.5em;
+        margin: 0;
+        margin-top: 2.5em;
+    }
+}
+
+@media (max-width: 700px) {
+    .mostrar-filtros {
+        font-size: 0.6rem;
+    }
 }
